<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>br.gov.mec</groupId>
	<artifactId>aghu-core</artifactId>
	<version>3.0</version>
	<packaging>pom</packaging>

	<modules>
		<module>aghu-core-view</module>
		<module>aghu-core-business</module>
		<module>aghu-core-commons</module>
		<module>aghu-core-service</module>
		<module>aghu-core-test</module>
		<module>aghu-core-security</module>
	</modules>

	<properties>
		<maven-pmd-plugin.version>2.7.1</maven-pmd-plugin.version>

		<compileSource>1.7</compileSource>
		<memoryArgLine>-Xms1024m -Xmx1024m -XX:MaxPermSize=768m</memoryArgLine>
		<threadCount>100</threadCount>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

		<!-- maven-compiler-plugin -->
		<maven.compiler.target>1.7</maven.compiler.target>
		<maven.compiler.source>1.7</maven.compiler.source>
		
		<aghu-core-commons.versao>3.3</aghu-core-commons.versao>	
	  	<aghu-core-test.versao>3.1</aghu-core-test.versao>  
		
		<apache-commons-lang.versao>3.3.2</apache-commons-lang.versao>
		<apache-commons-logging.versao>1.2</apache-commons-logging.versao>
		<apache-commons-beanutils.versao>1.9.2</apache-commons-beanutils.versao>

	</properties>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.wildfly.bom</groupId>
				<artifactId>jboss-javaee-7.0-wildfly</artifactId>
				<version>9.0.1.Final</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
		    <dependency>
				<groupId>org.wildfly.bom</groupId>
				<artifactId>jboss-javaee-7.0-wildfly-with-tools</artifactId>
				<version>9.0.1.Final</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>


	<build>
		<plugins>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>2.3</version>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

		</plugins>
	</build>

</project>